[A11y] fix border contrast for inputs

--- a/src/pretix/static/pretixbase/scss/_theme.scss
+++ b/src/pretix/static/pretixbase/scss/_theme.scss
@@ -41,19 +41,21 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .btn-default {
-  box-shadow: 0px 0px 0px 1px #cccccc inset;
+  box-shadow: 0px 0px 0px 1px $input-border inset;
   box-sizing: border-box;
 }
 
 .btn-default:hover, .btn-default:focus {
-  box-shadow: 0px 0px 0px 1px #cccccc inset, inset 0 1px 3px 0 #BFBFBF;
+  box-shadow: 0px 0px 0px 1px $input-border inset, inset 0 1px 3px 0 #BFBFBF;
   background: $btn-default-bg;
 }
 
 .btn-default:active, .btn-default:active:hover, .btn-default:active:focus {
-  box-shadow: 0px 0px 0px 1px #cccccc inset, inset 0 1px 8px 0 #BFBFBF;
   background: $btn-default-bg;
   outline: 0;
+}
+.btn-default.active, .btn-default.active:hover, .btn-default.active:focus {
+  box-shadow: 0px 0px 0px 1px $input-border inset, inset 0 1px 8px 0 #BFBFBF;  
 }
 
 .btn-primary:hover, .btn-primary:focus {
