--- a/src/pretix/static/pretixpresale/scss/main.scss
+++ b/src/pretix/static/pretixpresale/scss/main.scss
@@ -1,5 +1,6 @@
 // before variables.scss because it only affects presale, not control
 $body-bg: #f5f5f5 !default;
+$input-border: #949494;
 
 $font-size-base: 0.875rem !default;/* 14px/16px = 0.875rem */
 
@@ -103,9 +104,19 @@ a, .btn-link {
 /* see line 26, pretix/static/bootstrap/scss/bootstrap/_buttons.scss */
 button:focus, a:focus, .btn:focus, summary:focus,
 /*button:active, a:active, .btn:active, summary:active,*/
-button:active:focus, a:active:focus, .btn:active:focus, summary:active:focus {
+button:active:focus, a:active:focus, .btn:active:focus, summary:active:focus,
+input:focus, .form-control:focus, .btn-checkbox:has(input:focus) {
     outline: 2px solid $link-hover-color;
     outline-offset: 2px;
+}
+input:focus, .form-control:focus {
+    border-color: $input-border;
+    z-index: 2;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+.btn-checkbox input:focus {
+    outline: none;
 }
 
 footer {
